stage-1-practicals/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-deployment
  labels:
    app: fastapi-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fastapi-app
  template:
    metadata:
      labels:
        app: fastapi-app
    spec:
      securityContext:        # Added: Pod-level security context
        runAsNonRoot: true
        runAsUser: 1001       # resembles non root `appuser` specified in Dockerfile 

      containers:
      - name: python-fastapi-app
        image: 04-python-fastapi-app:latest
        imagePullPolicy: Never  # Uses local image, no pulling from registry
        
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1001       
          capabilities:                # Added: Drop all capabilities
            drop:
            - ALL
       
        volumeMounts:
          - name: db-env-port
            mountPath: /etc/config
            readOnly: true

          - name: secret-files
            mountPath: /mnt/secrets
            readOnly: true

          - name: tmp-volume
            mountPath: /tmp
        ports:
        - containerPort: 80
          #env:
          #- name: PORT
          #  value: "80"
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
      volumes:
        - name: db-env-port
          configMap:
            name: fastapi-config
        - name: secret-files
          secret:
            secretName: fastapi-db-secret
        - name: tmp-volume
          emptyDir: {}
