stage-1-practicals/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  labels:
    app: fastapi-app
spec:
  selector:
    app: fastapi-app
  ports:
    - protocol: TCP
      port: 80          # Service internal port
      targetPort: 80    # Container port
      # nodePort: 30443   # Expose on this port on the node
