stage-1-practicals/ingress.yaml
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: minimal-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
#spec:
#  ingressClassName: nginx-example
#  rules:
#    - host: "example.com"
#      http:
#        paths:
#        - path: /app
#        pathType: Prefix
#        backend:
#          service:
#            name: test
#            port:
#              number: 80

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx    # Changed from nginx-example to standard nginx
  rules:
    - host: fastapi.local.org  # Changed to match your app, If no host specified - accepts any host
      http:
        paths:
        - path: /app
          pathType: Prefix
          backend:
            service:
              name: fastapi-service
              port:
                number: 80
